# cmake-learning

./: .gitignore
step1/: CMakeLists.txt  tutorial.cxx
step2/: CMakeLists.txt  step2.cxx
step2/mysqrtlib/: CMakeLists.txt  mysqrt.cxx
step3/: CMakeLists.txt  TutorialConfig.h.in  step3.cxx  tutorial.cxx
step3/mysqrtlib/: CMakeLists.txt
step4/: CMakeLists.txt  step4.cxx  step4_config.h.in  tutorial.cxx
step7/: CMakeLists.txt  License.txt  step7.cxx  step7_config.h.in
step7/MathFunctions/: CMakeLists.txt
step7/mysqrtlib/: CMakeLists.txt  mysqrt.h
